--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,5 +6,9 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #FFFFFF;
+  background-color: #101011;
+  color: #FBFBFB;
+  width: 85vw;
+  margin-left: auto;
+  margin-right: auto;
 }
